Final product (Overflow issue)

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -22,50 +22,62 @@ body{
     /* Layout */
     box-sizing: border-box;
     font-family: $font-family;
-    max-width:100vw;
-    max-height:100vh;
+    width:100vw;
+    height:100vh;
     }
 
 main{
-  background-color: $color-white;
-  border-radius: 1.2em;
-  width: 23em;
-  height:25em;
   margin: 0 auto;
   margin-top: 13em;
-  display: flex; 
-  align-items: center; 
-  justify-content: center;
+  width: 23em;
+  height:25em;
 
   .card{
-    font-size: 1em;
-    .card-img{
-        z-index:1;
-        margin-top:-2.2em;
-        height:10em;
-        width:23em;
-        border-radius: 1em 1em 0 0;
-      }
+    border-radius: 1em;
+    width: 21.8em;
+    max-height:25em;
+    padding-top: 4.6rem;
+
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 0.5rem 2rem rgba($dark-grayish-blue, 1);
+    background: url(../images/bg-pattern-card.svg) no-repeat;
+    background-color: $color-white;
       .card-header{
         display: flex; 
         align-items: center; 
         justify-content: center;
         flex-direction: column;
-        flex-wrap: wrap;
-        text-align: center;
+
         .card-pfp{
             border-radius: 50%;
             border: .5em solid $color-white;
             z-index: 2;
         }
-        span{
-            font-weight: lighter;
-            color:$darkgray;
+        .card-header-info{
+            display: flex;
+            align-items: center; 
+            gap:.8em;
+            padding:0.5em 0;
+            .card-name{
+                font-size:1.3em;
+                color:$very-dark-desaturated-blue;
+            }
+            .card-age{
+                font-size: 1.3em;
+                color:$darkgray;
+            }
+        }
+        .card-location{
+            color: $darkgray;
+            padding:0 0 2.2em 0;
         }
       }   
       .card-profile-stats{
         width: 100%;
-        padding: 1.5rem 0;
+        padding: 2rem 0;
         border-top: 1px solid lighten($darkgray, 30%);
         text-align: center;
         display: flex;
